# romm-cli

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build_errors.txt  help.txt  openapi.json  release-please-config.json
.cargo/: config.toml
.github/workflows/: ci.yml  release-artifacts.yml  release-build.yml  release-please.yml
docs/: architecture.md  http-client.md  scan-after-upload-plan.md  troubleshooting-auth.md  tui.md
docs/plans/: 2026-04-10-tui-auth-fix-design.md  2026-04-11-tui-error-handling-design.md  2026-04-12-windows-keyring-credential-research.md  2026-04-18-tui-startup-latency-design.md  2026-04-18-tui-startup-latency-implementation-plan.md
scripts/: check-romm-connectivity.sh
src/: client.rs  config.rs  lib.rs  main.rs  services.rs  types.rs
src/commands/: api.rs  auth.rs  cache.rs  download.rs  init.rs  library_scan.rs  mod.rs  platforms.rs  print.rs  roms.rs  scan.rs  update.rs
src/core/: cache.rs  download.rs  interrupt.rs  mod.rs  startup_library_snapshot.rs  utils.rs
src/endpoints/: client_tokens.rs  collections.rs  mod.rs  platforms.rs  roms.rs  system.rs  tasks.rs
src/frontend/: cli.rs  gui_slint.rs  mod.rs  tui.rs
src/tui/: app.rs  cache.rs  download.rs  keyboard_help.rs  mod.rs  openapi.rs  openapi_sync.rs  path_picker.rs  text_search.rs  utils.rs
src/tui/screens/: browse.rs  connected_splash.rs  download.rs  execute.rs  game_detail.rs  library_browse.rs  main_menu.rs  mod.rs  result.rs  search.rs  settings.rs  setup_wizard.rs
src/update/: mod.rs
tests/: cli_api.rs  cli_cache.rs  cli_init.rs  cli_platforms.rs  cli_roms.rs  cli_scan.rs  openapi_registry.rs  tui_app.rs
tests/fixtures/: openapi_path_item.json
tools/: openapi_gen.rs
