[package]
name = "romm-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
base64 = "0.22"

