[package]
name = "romm-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
# default-features = false avoids native-tls/openssl-sys (breaks aarch64-linux cross-builds in CI).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
base64 = "0.22"
ratatui = "0.26"
crossterm = "0.27"
sha2 = "0.10"
percent-encoding = "2.3"
dirs = "6.0"
dialoguer = { version = "0.11", default-features = false, features = ["password"] }

[dev-dependencies]
mockall = "0.13"
assert_cmd = "2.0"
httpmock = "0.7"
predicates = "3.1"

